*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -46,13 +46,13 @@
           <ul class="slides">
         
             <li> <img src="images/screenshots/01.png" alt="" />
-              <p class="flex-caption"> Software overview with the standard skin</p>
+              <p class="flex-caption"> Software Card View</p>
             </li>
             <li> <img src="images/screenshots/02.png" alt="" />
-              <p class="flex-caption"> Software overview with a very different skin</p>
+              <p class="flex-caption"> Software Table View</p>
             </li>
             <li> <img src="images/screenshots/03.png" alt="" />
-              <p class="flex-caption"> Movie overview</p>
+              <p class="flex-caption"> Movie Movie</p>
             </li>            
           </ul>
         </div>
