*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -184,8 +184,8 @@
           <li>&euro;  41,50</li>
         </ul>
         
-        <p><br><b>A big thanks to all contributors!</b> The total for 2013 so far is: <b>&euro; 365,00</b>.</p>
-        <p><i>Last updated on May 18th, 2013.</i></p>
+        <p><br><b>A big thanks to all contributors!</b> The total for 2013 so far is: <b>&euro; 406,50</b>.</p>
+        <p><i>Last updated on July 22nd, 2013.</i></p>
 
         <p><br>I hope you enjoy using Data Crow. In case you want to make a donation you can use one of the buttons below. Donations can be made
         via Paypal. In case you want your donation to be visible to the public I suggest you use the Sourceforge.net donation method.<br><br></p>
