*** empty log message ***

--- a/help/charts/charts.html
+++ b/help/charts/charts.html
@@ -6,9 +6,9 @@
   <body>
   
     <h1>Creating a Chart</h1>
-    <i>Module Bar &gt; Select a Module &gt; Charts tab</i><br><br>
+    <i>Menu Bar &gt; Tools &gt; Charts</i><br><br>
 
-    Every module has a chart panel. In the chart panel you can easily create a simple chart. In the first list you can select
+    Every module has the chart tool available. The chart tool allows you to easily create a simple chart. In the first list you can select
     the field on which the chart should be based. In the second list you can select the chart type (such as a pie chart or a bar chart).
     After making your selection, press the button. Items having no value set for the selected field are represented by the "empty" 
     category.<br>
