--- a/help/general/menubar.html
+++ b/help/general/menubar.html
@@ -284,6 +284,10 @@
         Create HTML and PDF reports. If this menu option is not available it means that no XSLT files (report templates) have been defined for your module. 
         There is a manual on how to do this, which can be found on the Data Crow website.
         </td></tr>
+        <tr><td><img src="./images/tb_charts.png" alt="" border="0"></td>
+        <td><a href="../charts/charts.html">Charts</a>. 
+        Create a graphical representation on the information of your items. 
+        </td></tr>
         <tr><td><img src="./images/tb_itemexport.png" alt="" border="0"></td>
         <td><a href="../tools/item_export.html">Item Export Wizard</a>. 
         Export your items to a CSV or XML (recommended) file.
@@ -291,6 +295,10 @@
         <tr><td><img src="./images/tb_itemimport.png" alt="" border="0"></td>
         <td><a href="../tools/item_import.html">Item Import Wizard</a>. 
         Import your items from a CSV or XML file.
+        </td></tr>
+        <tr><td><img src="./images/tb_createmultiple.png" alt="" border="0"></td>
+        <td><a href="../items/create_multiple.html">Create Multiple Items</a>. 
+        Allows for quick manual creation of multiple items
         </td></tr>
         <tr><td><img src="./images/tb_updateall.png" alt="" border="0"></td>
         <td><a href="../tools/update_all.html">Update All</a>. 
