--- a/help/general/toolbar.html
+++ b/help/general/toolbar.html
@@ -20,9 +20,9 @@
         <td><a href="../items/wizard.html">Item Wizard</a>. 
         Starts a wizard to quickly add a new item.
         </td></tr>
-        <tr><td><img src="./images/tb_open.png" alt="" border="0"></td>
-        <td><a href="../items/itemform.html">Open</a>. 
-        Opens the currently selected item in the view.
+        <tr><td><img src="./images/tb_createmultiple.png" alt="" border="0"></td>
+        <td><a href="../items/create_multiple.html">Create Multiple Items</a>. 
+        Allows for quick manual creation of multiple items
         </td></tr>
         <tr><td><img src="./images/tb_add.png" alt="" border="0"></td>
         <td><a href="../items/itemform.html">Create</a>. 
@@ -31,6 +31,10 @@
         <tr><td><img src="./images/tb_delete.png" alt="" border="0"></td>
         <td><a href="../items/views.html">Delete</a>. 
         Deletes all selected items (in the view) from the database. This cannot be reverted (only by restoring a backup).
+        </td></tr>
+        <tr><td><img src="./images/tb_open.png" alt="" border="0"></td>
+        <td><a href="../items/itemform.html">Open</a>. 
+        Opens the currently selected item in the view.
         </td></tr>
         <tr><td><img src="./images/tb_save.png" alt="" border="0"></td>
         <td><a href="../items/views.html">Save</a>.
@@ -52,7 +56,11 @@
         <tr><td><img src="./images/tb_onlinesearch.png" alt="" border="0"></td>
         <td><a href="../onlinesearch/onlinesearch.html">Online Search</a>. 
         Find information on your items online, select the item and save it. 
-        </td></tr>        
+        </td></tr>
+        <tr><td><img src="./images/tb_charts.png" alt="" border="0"></td>
+        <td><a href="../charts/charts.html">Charts</a>. 
+        Create a graphical representation on the information of your items. 
+        </td></tr>            
     </table>  
 </body>
 </html>
