--- a/help/onlinesearch/onlinesearch.html
+++ b/help/onlinesearch/onlinesearch.html
@@ -44,7 +44,8 @@
     any additional information. They will only have a name and nothing else. When this option is enabled Data Crow will try and retrieve images and a description. Note that at any point in time you can decide to update all persons and companies using the "Mass Update" feature (<a href="../tools/mass_update.html">more about this</a>) of Data Crow or one by one by using the online search functionality of the specific module.
 
 	<h2>Adding the results to Data Crow</h2>
-	When you have found the result you were looking for select the item(s) and press "Add item(s)". The items are then added to the new item tab. The items are not yet saved to the database. The new item tab is a holding place for items eligible to be added to the database. You can, if you want, modify them here before saving them to database (by pressing "save").
+	When you have found the result you were looking for select the item(s) and press "Add item(s)". 
+    The items are now added to your collection!
 
 	<br><br>
 
