--- a/help/tools/fileinformationimport.html
+++ b/help/tools/fileinformationimport.html
@@ -81,8 +81,9 @@
     </table> 
 
     <h3>Saving items</h3>
-    You can choose to save items directly into the database instead of adding them first to the new items tab. 
-    Using this option (save directly; bypass the new items tab) reduces the memory needed by the importer. 
+    You can choose to save items directly into the database instead of adding them first to the 
+    <a href="../items/create_multiple.html">Create Multiple Items</a> view. 
+    Using this option (save directly; bypass the <a href="../items/create_multiple.html">Create Multiple Items</a>) reduces the memory needed by the importer. 
 
     <h2>Title Cleaning</h2>
     
