--- a/help/general/screen_layout.html
+++ b/help/general/screen_layout.html
@@ -22,24 +22,18 @@
 
     <br><br><img src="./images/menubar_submodule.png" alt="" border="0"><br><br>
 
-    Click on the small bar at the bottom of the module button, called "Select Module". This will allow you to select 
+    Click on the small bar at the bottom of the module button. This will allow you to select 
     any of the sub modules.<br>
     
 	<h2>Grouping pane</h2>
 	Allows for grouping the items. <a href="grouping_pane.html">More about this.</a>
 
-	<h2>Item tab</h2>
-    Existing items are displayed in this pane. The displayed items can be opened, updated or deleted.
+	<h2>View</h2>
+    Existing items are displayed in the middle section of the screen. 
+    The displayed items can be opened, updated or deleted. All of this is explained in the 
+     <a href="../items/views.html">views</a> section of the help.
 
-	<br><br><img src="./images/view_itemtab.jpg" alt="" border="0">
+    <br><br><img src="./images/view_cardview.png" alt="" border="0"><br>
 
-	<h2>New item tab </h2>
-	Unsaved, new items are added here. New items can be imported from the internet or extracted from files or CD drives.
-    Additionally you can quickly add new items from here yourself. You can find an explanation <a href="../general/views.html">here</a>.
-
-	<br><br><img src="./images/view_newitemtab.jpg" alt="" border="0">
-
-	<h2>Charts</h2>
-	Create a simple chart. <a href="../charts/charts.html">More about this.</a>
   </body>
 </html>
