--- a/homepage/index.html
+++ b/homepage/index.html
@@ -178,19 +178,19 @@
       <h3 class="page_title"> Downloads</h3>
       <div class="page_content">
         <ul id="download_sources" class="grid">
-          <li class="windows_installer"><a href="http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.11.1/datacrow_3_11_1_windows_installer.zip" target="new">
+          <li class="windows_installer"><a href="http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.12/datacrow_3_12_windows_installer.zip" target="new">
             <img src="images/downloads/windows.png" alt="Windows Installer"></a>
             <i><small><center>Data Crow Windows Installer</center></small></i></li>
-          <li class="installer"><a href="http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.11.1/datacrow_3_11_1_installer.zip" target="new">
+          <li class="installer"><a href="http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.12/datacrow_3_12_installer.zip" target="new">
             <img src="images/downloads/installer.png" alt="Installer"></a>
             <i><small><center>Data Crow Other OS Installer</center></small></i></li>            
-          <li class="zipped"><a href="http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.11.1/datacrow_3_11_1_zipped.zip" target="new">
+          <li class="zipped"><a href="http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.12/datacrow_3_12_zipped.zip" target="new">
             <img src="images/downloads/zipped.png" alt="Zipped version"></a>
             <i><small><center>Data Crow: Unpack and Run</center></small></i></li>            
           <li class="java"><a href="http://www.java.com" target="new">
             <img src="images/downloads/java.png" alt="Java from Oracle"></a>
             <i><small><center>Java - External Site</center></small></i></li>   
-          <li class="source"><a href="http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.11.1/datacrow_3_11_1_source.zip" target="new">
+          <li class="source"><a href="http://downloads.sourceforge.net/project/datacrow/Production%20versions/3.12/datacrow_3_12_source.zip" target="new">
             <img src="images/downloads/source.png" alt="Source Code"></a>
             <i><small><center>Data Crow Source Code</center></small></i></li>
 
@@ -200,6 +200,9 @@
           <li class="developer_guide"><a href="http://downloads.sourceforge.net/project/datacrow/Documentation/Developer%20Guide/data_crow_developer_guide.pdf" target="new">
             <img src="images/downloads/devdoc.png" alt="Developer Manual"></a>
             <i><small><center>Developer Guide</center></small></i></li>
+          <li class="module_manual"><a href="http://downloads.sourceforge.net/project/datacrow/Documentation/Developer%20Guide/data_crow_developer_guide.pdf" target="new">
+            <img src="images/downloads/devdoc.png" alt="Developer Manual"></a>
+          <i><small><center>Developer Guide</center></small></i></li>
         </ul>
       </div>
     </div>
@@ -262,6 +265,13 @@
       <h3 class="page_title"> Latest News</h3>
         <div class="page_content"> 
           <ul>
+            
+            <p><i>4 August 2013</i> - Data Crow 3.12</p>
+            <li><blockquote>
+            I could call this the cosmetic edition.. Lots of layout changes! This is also a preparation for the web GUI since I want to keep the layout for
+            both the same, for as far as possible.<br>
+            <a href="./changelog.txt" target="new">changelog</a> for more information (text file, opens in a new window).
+            </blockquote></li>  
           
             <p><i>30 July 2013</i> - Data Crow 3.11.1</p>
             <li><blockquote>
