*** empty log message ***

--- a/help/tools/findreplace.html
+++ b/help/tools/findreplace.html
@@ -11,7 +11,12 @@
 
 	<br><br><img src="./images/findreplace.png" /> <br><br>
 
-    This functionality allows you to quickly replace part of a text with a new value.<br>
+    This functionality allows you to quickly replace part a value of all items in the module with a new value.
+    This allows you to quickly change a reference you have created for an item with another reference (change category X
+    for category Y, while leaving other categories present) or to replacing text with another text.
+    <br>
+    The Find and Replace will first present you the changes before applying them (you can still opt out at that point).
+    <br><br>
     
     <table cellspacing="2" cellpadding="2" border="0">
         <tr><td>-</td>
@@ -20,11 +25,11 @@
         </td></tr>
     	<tr><td>-</td>
         <td><b>Find</b>
-        Enter the value to replace.
+        Enter / select the value to replace.
         </td></tr>
     	<tr><td>-</td>
         <td><b>Replacement</b>
-        Enter the replacement for the defined value (the Find)
+        Enter / select the replacement for the defined value (the Find)
         </td></tr>             
     </table>    
     
