*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -266,10 +266,14 @@
         <div class="page_content"> 
           <ul>
             
-            <p><i>4 August 2013</i> - Data Crow 3.12</p>
+            <p><i>3 August 2013</i> - Data Crow 3.12</p>
             <li><blockquote>
-            I could call this the cosmetic edition.. Lots of layout changes! This is also a preparation for the web GUI since I want to keep the layout for
-            both the same, for as far as possible.<br>
+            Poor version 3.11. It only took a couple of days and then it got replaced by version 3.12.
+            This really is for the most part a cosmetic edition. I have changed the layout a bit 
+            further. This is also a preparation for the web GUI since I want to keep the layout for
+            both the same, for as far as possible. Due to the list of changes made and the addition 
+            of new functionality I have decided to release this as a normal version instead of a minor 
+            version. I wanted to add a bit more but was ill for a couple of days, shame!<br>
             Read the <a href="./changelog.txt" target="new">changelog</a> for more information (text file, opens in a new window).
             </blockquote></li>  
           
