*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -204,7 +204,7 @@
       </div>
     </div>
     <div class="page" id="donations"> 
-      <h3 class="page_title"> Donations - Status <img style="border-width:0px" src="./images/motivation-low.png"></h3>
+      <h3 class="page_title"> Donations - Status <img style="border-width:0px" src="./images/motivation-normal.png"></h3>
       <div class="page_content">
         
         <p>Data Crow is 100 per cent free. I rely on donations to cover my costs, such as hosting fees, tools, books, licenses and hardware. 
@@ -222,11 +222,11 @@
           <li>&euro;  55,00</li>
           <li>&euro;  61,00</li>
           <li>&euro;  41,50</li>
-          <li>&euro;   0,00</li>
+          <li>&euro;  45,00</li>
         </ul>
         
-        <p><br><b>A big thanks to all contributors!</b> The total for 2013 so far is: <b>&euro; 406,50</b>.</p>
-        <p><i>Last updated on August 4, 2013.</i></p>
+        <p><br><b>A big thanks to all contributors!</b> The total for 2013 so far is: <b>&euro; 451,50</b>.</p>
+        <p><i>Last updated on August 15, 2013.</i></p>
 
         <p><br>I hope you enjoy using Data Crow. In case you want to make a donation you can use one of the buttons below. Donations can be made
         via Paypal. In case you want your donation to be visible to the public I suggest you use the Sourceforge.net donation method.<br><br></p>
