*** empty log message ***

--- a/homepage/index.html
+++ b/homepage/index.html
@@ -127,8 +127,8 @@
       <h3 class="page_title"> About Us</h3>
       <div class="page_content">
         <p> Data Crow has been developed by me, Robert Jan van der Waals. I started this project for my own collections. 
-        In the years that followed I have made it available to the public, have expanded the functionality significantly while
-        delivering the software for free. The project is hosted, for free, on Sourceforge.net.  
+        In the years that followed I have made it available to the public and expanded the functionality significantly while still
+        delivering the software for free. The project is hosted, at no cost, by Sourceforge.net.  
         </p>
         <p><br />
           <center><a href="http://sourceforge.net/projects/datacrow" target="new"><img src="http://sflogo.sourceforge.net/sflogo.php?group_id=84631&amp;type=3" border="0" alt="SourceForge.net Logo" /></a></center>
